fix some spacing

--- a/public/css/resume.css
+++ b/public/css/resume.css
@@ -159,7 +159,8 @@ article pre {
     color: #252525;
   }
 
-  .sunlight {margin-top: 15px;}
+  .resume .eighteen-f {margin-top: 35px;}
+  .resume .sunlight {margin-top: 35px;}
   .sunlight, .work {margin-bottom: 5px;}
   /*.personal {margin-bottom: 0px;}*/
 
